--- a/notebooks/auto screenshot and manual crop.ipynb
+++ b/notebooks/auto screenshot and manual crop.ipynb
@@ -2,18 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "# http://selenium-python.readthedocs.io/getting-started.html\n",
     "import time \n",
+    "import re\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.keys import Keys\n",
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
-    "from selenium.webdriver.chrome.options import Options"
+    "from selenium.webdriver.chrome.options import Options\n",
+    "from selenium.webdriver import Firefox\n",
+    "from selenium.webdriver.firefox.options import Options"
    ]
   },
   {
@@ -41,45 +44,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<selenium.webdriver.remote.webelement.WebElement (session=\"8a763351314218492d462fe09508dc0d\", element=\"0.9753048519238097-1\")>\n",
-      "screenshot 0\n",
-      "screenshot 1\n",
-      "screenshot 2\n"
+     "ename": "NameError",
+     "evalue": "name 'process_img' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-52-50b1137f1a6d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0midx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0mdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave_screenshot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscreenshots_dir\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'lcs'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m'.png'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m         \u001b[0mprocess_img\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'screenshot {0}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m         \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'process_img' is not defined"
      ]
     }
    ],
    "source": [
-    "chrome_options = Options()\n",
-    "chrome_options.add_argument('load-extension=' + adblock_path)\n",
-    "chrome_options.add_argument(\"--window-size=1280,720\")\n",
-    "driver = webdriver.Chrome(driver_path, chrome_options=chrome_options) \n",
-    "driver.create_options()\n",
+    "# chrome_options = Options()\n",
+    "# chrome_options.add_argument('load-extension=' + adblock_path)\n",
+    "# chrome_options.add_argument(\"--window-size=1280,720\")\n",
+    "# driver = webdriver.Chrome(driver_path, chrome_options=chrome_options) \n",
+    "# chrome_options.add_argument(\"screenshot\");\n",
+    "# driver.create_options()\n",
+    "\n",
     "try:\n",
     "    driver.get(video_url)\n",
-    "#     time.sleep(5)\n",
-    "#     elem = driver.find_element_by_xpath('//body')\n",
     "    elem = driver.find_element_by_class_name('ytp-fullscreen-button')\n",
-    "    print(elem)\n",
-    "    time.sleep(3)\n",
-    "#     elem.click()\n",
-    "#     elem.send_keys('f')\n",
-    "#     elem.click()\n",
-    "#     time.sleep(5)\n",
-    "#     print('ok')\n",
-    "#     elem = driver.find_element_by_id('container')\n",
-    "#     elem.click()\n",
-    "#     elem.send_keys('f')\n",
-    "#     elem = driver.switch_to.active_element\n",
-    "#     print(elem)\n",
-    "#     elem.send_keys('f')\n",
-    "#     webdriver.ActionChains(driver).send_keys('f').perform()\n",
     "    time.sleep(3)\n",
     "    driver.save_screenshot(screenshots_dir + 'bla.png')\n",
     "    time.sleep(2)\n",
@@ -88,6 +78,7 @@
     "    webdriver.ActionChains(driver).send_keys('f').perform()\n",
     "    for idx in range(3):\n",
     "        driver.save_screenshot(screenshots_dir + 'lcs' + str(idx) +'.png')\n",
+    "        process_img()\n",
     "        print('screenshot {0}'.format(idx))\n",
     "        time.sleep(3)\n",
     "finally:\n",
