added some comments

--- a/notebooks/portrait_identifier.ipynb
+++ b/notebooks/portrait_identifier.ipynb
@@ -128,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### get portraits for each champion\n",
+    "### get portraits for each champion. screen regions for this are manually defined\n",
     "def get_team1_portraits(scoreboard):\n",
     "    pic0 = scoreboard[4:46, 399:441, :]\n",
     "    pic1 = scoreboard[60:102, 399:441, :]\n",
@@ -211,6 +211,7 @@
     }
    ],
    "source": [
+    "### size of thumbnails we grabbed. make sure this is actually the same size as each one\n",
     "size = 42, 42\n",
     "\n",
     "### resize all these portraits\n",
